adding plugin for styled components
adding some config in coc settings

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -52,5 +52,8 @@
   "diagnostic.warningSign": "",
   "diagnostic.infoSign": "●",
   "diagnostic.hintSign": "○",
-  "coc.preferences.colorSupport": true
+  "coc.preferences.colorSupport": true,
+  "eslint.autoFixOnSave": true,
+  "tsserver.formatOnType": true,
+  "eslint.run": "onSave"
 }
