feat: adding clangd support in coc

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -71,5 +71,6 @@
   },
   "go.goplsOptions": {
     "staticcheck": true
-  }
+  },
+  "clangd.path": "/home/mrluisfer/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
 }
