[fix] add deoplete and commented coc plugin

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -13,7 +13,7 @@
   ],
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
-  "explorer.previewAction.onHover": "content",
+  "explorer.previewAction.onHover": false,
   "explorer.keyMappings.global": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
