--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 indent_size = 2
+indent_style = space
 
 [*.{vim, lua}]
 charset = utf-8
@@ -21,4 +22,3 @@ indent_style = tab
 [{package.json,.travis.yml}]
 indent_style = space
 indent_size = 2
-
